# bevy_pixel_camera

./: Cargo.toml  README.md
assets/: flappin-bird.aseprite  flappin-clouds.aseprite  flappin-pillars.aseprite
examples/: flappin.rs  float_scaling.rs  mire.rs
src/: lib.rs  pixel_border.rs  pixel_camera.rs  pixel_plugin.rs  pixel_zoom.rs  tests.rs
