[package]
name = "bevy_pixel_camera"
version = "0.1.2"
authors = ["drakmaniso <moussault.laurent@gmail.com>"]
edition = "2021"
description = "A simple pixel-perfect camera plugin for Bevy, suitable for pixel-art"
readme = "README.md"
repository = "https://github.com/drakmaniso/bevy_pixel_camera"
keywords = ["bevy", "graphics", "2d", "pixels", "pixel-art"]
categories = ["graphics", "game-development"]
exclude = ["assets/**", ".vscode/**"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6", path = "../bevy" }
