[package]
name = "bevy_pixel_camera"
version = "0.5.0"
authors = ["drakmaniso <moussault.laurent@gmail.com>"]
edition = "2021"
description = "A simple pixel-perfect camera plugin for Bevy, suitable for pixel-art"
readme = "README.md"
repository = "https://github.com/drakmaniso/bevy_pixel_camera"
keywords = ["bevy", "graphics", "2d", "pixels", "pixel-art"]
categories = ["graphics", "game-development"]
exclude = ["assets/**", ".vscode/**"]
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = ["bevy_core_pipeline", "bevy_render", "bevy_sprite"] }

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = ["bevy_winit", "bevy_asset", "png", "x11"] }

[[example]]
name = "flappin"
required-features = ["bevy/bevy_winit", "bevy/bevy_asset", "bevy/png"]

[[example]]
name = "mire"
required-features = ["bevy/bevy_winit", "bevy/bevy_asset", "bevy/png"]
